[WIP] Update footer info

--- a/grails-app/assets/stylesheets/user/main.css
+++ b/grails-app/assets/stylesheets/user/main.css
@@ -804,3 +804,7 @@ tr.planning-day-row td {
   	left: 50%;
   	transform: translate(-50%, -50%);
 }
+
+#footer .footer-body {
+	background-image: none;
+}
