Consumption trend widget

--- a/grails-app/assets/stylesheets/user/main.css
+++ b/grails-app/assets/stylesheets/user/main.css
@@ -840,3 +840,18 @@ body {
 	padding : 5px;
 	height: 100%;
 }
+
+.trend-good h2, .trend-good svg {
+	color: seagreen;
+	fill: seagreen;
+}
+
+.trend-bad h2, .trend-bad svg {
+	color: orangered;
+	fill: orangered;
+}
+
+.trend-neutral h2, .trend-neutral svg {
+	color: black;
+	fill: black;
+}
