--- a/grails-app/assets/stylesheets/user/main.css
+++ b/grails-app/assets/stylesheets/user/main.css
@@ -831,6 +831,20 @@ tr.planning-day-row td {
 	height: 100%;
 }
 
+form.login .field-group, form.login .buttons-container {
+	padding-left: 0px;
+	text-align: center;
+}
+
+button.aui-button-primary.highlight {
+	background: limegreen;
+	font-size: 16px;
+}
+
+button.aui-button-primary.highlight:hover {
+	background: lawngreen;
+}
+
 .trend-good h2, .trend-good svg {
 	color: seagreen;
 	fill: seagreen;
