--- a/grails-app/assets/stylesheets/user/main.css
+++ b/grails-app/assets/stylesheets/user/main.css
@@ -805,8 +805,18 @@ tr.planning-day-row td {
   	transform: translate(-50%, -50%);
 }
 
+/* set footer at the page bottom */
+body {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+	justify-content: space-between
+}
+
 #footer .footer-body {
 	background-image: none;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 
 #footer {
@@ -821,13 +831,13 @@ tr.planning-day-row td {
 }
 
 #footer th {
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 }
 
 #footer .logo-block {
 	display: inline-block;
 	vertical-align: middle;
-	padding : 10px;
+	padding : 5px;
 	height: 100%;
 }
 
