--- a/grails-app/assets/stylesheets/user/main.css
+++ b/grails-app/assets/stylesheets/user/main.css
@@ -1,3 +1,7 @@
+body, h5, .label, .aui-button, .aui-button:visited {
+	font-size: 16px;
+}
+
 .mobile-only {
 	display: none;
 }
@@ -376,7 +380,7 @@ tr.incluNorme td {
 
 .label {
 	color: #707070;
-	font-size: 14px;
+	/*font-size: 14px;*/
 }
 
 .plugin-pane {
